docs-archive/apache-airflow-providers-cncf-kubernetes/10.24.0/_sources/_api/airflow/providers/cncf/kubernetes/utils/pod_manager/index.rst.txt
airflow.providers.cncf.kubernetes.utils.pod_manager
===================================================

.. py:module:: airflow.providers.cncf.kubernetes.utils.pod_manager

.. autoapi-nested-parse::

   Launches PODs.



Attributes
----------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.utils.pod_manager.EMPTY_XCOM_RESULT


Exceptions
----------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.utils.pod_manager.XComRetrievalError
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodLaunchTimeoutException
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodNotFoundException
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodCommandException


Classes
-------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.utils.pod_manager.PodPhase
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodLogsConsumer
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodLoggingStatus
   airflow.providers.cncf.kubernetes.utils.pod_manager.PodManager
   airflow.providers.cncf.kubernetes.utils.pod_manager.OnFinishAction
   airflow.providers.cncf.kubernetes.utils.pod_manager.OnKillAction
   airflow.providers.cncf.kubernetes.utils.pod_manager.AsyncPodManager


Functions
---------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.utils.pod_manager.check_exception_is_kubernetes_api_unauthorized
   airflow.providers.cncf.kubernetes.utils.pod_manager.log_pod_event
   airflow.providers.cncf.kubernetes.utils.pod_manager.await_pod_start
   airflow.providers.cncf.kubernetes.utils.pod_manager.detect_pod_terminate_early_issues
   airflow.providers.cncf.kubernetes.utils.pod_manager.is_log_group_marker
   airflow.providers.cncf.kubernetes.utils.pod_manager.parse_log_line


Module Contents
---------------

.. py:data:: EMPTY_XCOM_RESULT
   :value: '__airflow_xcom_result_empty__'


   Sentinel for no xcom result.

   :meta private:


.. py:exception:: XComRetrievalError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   When not possible to get xcom.


.. py:class:: PodPhase

   Possible pod phases.

   See https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-phase.


   .. py:attribute:: PENDING
      :value: 'Pending'



   .. py:attribute:: RUNNING
      :value: 'Running'



   .. py:attribute:: FAILED
      :value: 'Failed'



   .. py:attribute:: SUCCEEDED
      :value: 'Succeeded'



   .. py:attribute:: UNKNOWN
      :value: 'Unknown'



   .. py:attribute:: terminal_states


.. py:function:: check_exception_is_kubernetes_api_unauthorized(exc)

.. py:function:: log_pod_event(pod_manager, event, seen_events)

   Log a pod event if not already seen.

   :param pod_manager: The pod manager instance for logging
   :param event: Kubernetes event
   :param seen_events: Set of event UIDs already logged to avoid duplicates


.. py:function:: await_pod_start(pod_manager, pod, schedule_timeout = 120, startup_timeout = 120, check_interval = 1)
   :async:


   Monitor the startup phase of a Kubernetes pod, waiting for it to leave the ``Pending`` state.

   This function is shared by both PodManager and AsyncPodManager to provide consistent pod startup tracking.

   :param pod_manager: The pod manager instance (PodManager or AsyncPodManager).
   :param pod: The pod object to monitor.
   :param schedule_timeout: Maximum time (in seconds) to wait for the pod to be scheduled.
   :param startup_timeout: Maximum time (in seconds) to wait for the pod to start running after being scheduled.
   :param check_interval: Interval (in seconds) between status checks.


.. py:function:: detect_pod_terminate_early_issues(pod)

   Identify issues that justify terminating the pod early.

   This method distinguishes between permanent failures (e.g., invalid image names)
   and transient errors (e.g., rate limits) that should be retried by Kubernetes.

   :param pod: The pod object to check.
   :return: An error message if an issue is detected; otherwise, None.


.. py:exception:: PodLaunchTimeoutException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   When pod does not leave the ``Pending`` phase within specified timeout.


.. py:exception:: PodNotFoundException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Expected pod does not exist in kube-api.


.. py:exception:: PodCommandException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   When a pod command execution fails.


.. py:class:: PodLogsConsumer(response, pod, pod_manager, container_name, post_termination_timeout = 120, read_pod_cache_timeout = 120)

   Responsible for pulling pod logs from a stream with checking a container status before reading data.

   This class is a workaround for the issue https://github.com/apache/airflow/issues/23497.

   :param response: HTTP response with logs
   :param pod: Pod instance from Kubernetes client
   :param pod_manager: Pod manager instance
   :param container_name: Name of the container that we're reading logs from
   :param post_termination_timeout: (Optional) The period of time in seconds representing for how long time
       logs are available after the container termination.
   :param read_pod_cache_timeout: (Optional) The container's status cache lifetime.
       The container status is cached to reduce API calls.

   :meta private:


   .. py:attribute:: response


   .. py:attribute:: pod


   .. py:attribute:: pod_manager


   .. py:attribute:: container_name


   .. py:attribute:: post_termination_timeout
      :value: 120



   .. py:attribute:: last_read_pod_at
      :value: None



   .. py:attribute:: read_pod_cache
      :value: None



   .. py:attribute:: read_pod_cache_timeout
      :value: 120



   .. py:method:: __iter__()

      Yield log items divided by the '\n' symbol.



   .. py:method:: logs_available()


   .. py:method:: read_pod()


.. py:class:: PodLoggingStatus

   Return the status of the pod and last log time when exiting from `fetch_container_logs`.


   .. py:attribute:: running
      :type:  bool


   .. py:attribute:: last_log_time
      :type:  pendulum.DateTime | None


.. py:class:: PodManager(kube_client, callbacks = None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Create, monitor, and otherwise interact with Kubernetes pods for use with the KubernetesPodOperator.


   .. py:attribute:: stop_watching_events
      :value: False



   .. py:attribute:: container_log_times
      :type:  dict[tuple[str, str, str], pendulum.DateTime]


   .. py:method:: run_pod_async(pod, **kwargs)

      Run POD asynchronously.



   .. py:method:: delete_pod(pod)

      Delete POD.



   .. py:method:: create_pod(pod)

      Launch the pod asynchronously.



   .. py:method:: watch_pod_events(pod, check_interval = 10)
      :async:


      Read pod events and write into log.



   .. py:method:: await_pod_start(pod, schedule_timeout = 120, startup_timeout = 120, check_interval = 1)
      :async:


      Wait for the pod to reach phase other than ``Pending``.

      :param pod:
      :param schedule_timeout: Timeout (in seconds) for pod stay in schedule state
          (if pod is taking to long in schedule state, fails task)
      :param startup_timeout: Timeout (in seconds) for startup of the pod
          (if pod is pending for too long after being scheduled, fails task)
      :param check_interval: Interval (in seconds) between checks
      :return:



   .. py:method:: fetch_container_logs(pod, container_name, *, follow=False, since_time = None, post_termination_timeout = 120, container_name_log_prefix_enabled = True, log_formatter = None)

      Follow the logs of container and stream to airflow logging.

      Returns when container exits.

      Between when the pod starts and logs being available, there might be a delay due to CSR not approved
      and signed yet. In such situation, ApiException is thrown. This is why we are retrying on this
      specific exception.

      :meta private:



   .. py:method:: fetch_requested_init_container_logs(pod, init_containers, follow_logs=False, container_name_log_prefix_enabled = True, log_formatter = None)

      Follow the logs of containers in the specified pod and publish it to airflow logging.

      Returns when all the containers exit.

      :meta private:



   .. py:method:: fetch_requested_container_logs(pod, containers, follow_logs=False, container_name_log_prefix_enabled = True, log_formatter = None)

      Follow the logs of containers in the specified pod and publish it to airflow logging.

      Returns when all the containers exit.

      :meta private:



   .. py:method:: await_container_completion(pod, container_name, polling_time = 1)

      Wait for the given container in the given pod to be completed.

      :param pod: pod spec that will be monitored
      :param container_name: name of the container within the pod to monitor
      :param polling_time: polling time between two container status checks.
          Defaults to 1s.



   .. py:method:: await_pod_completion(pod, istio_enabled = False, container_name = 'base', do_xcom_push = False)

      Monitor a pod and return the final state.

      :param istio_enabled: whether istio is enabled in the namespace
      :param pod: pod spec that will be monitored
      :param container_name: name of the container within the pod
      :param do_xcom_push: whether to push XComs
      :return: V1Pod



   .. py:method:: container_is_running(pod, container_name)

      Read pod and checks if container is running.



   .. py:method:: container_is_terminated(pod, container_name)

      Read pod and checks if container is terminated.



   .. py:method:: read_pod_logs(pod, container_name, tail_lines = None, timestamps = False, since_seconds = None, follow=True, post_termination_timeout = 120, **kwargs)

      Read log from the POD.



   .. py:method:: get_init_container_names(pod)

      Return container names from the POD except for the airflow-xcom-sidecar container.

      :meta private:



   .. py:method:: get_container_names(pod)

      Return container names from the POD except for the airflow-xcom-sidecar container.

      :meta private:



   .. py:method:: read_pod_events(pod, resource_version = None)

      Read events from the POD with optimization parameters to reduce API load.

      :param pod: The pod to get events for
      :param resource_version: Only return events newer than this resource version
      :param limit: Maximum number of events to return



   .. py:method:: read_pod(pod)

      Read POD information.



   .. py:method:: await_xcom_sidecar_container_start(pod, timeout = 900, log_interval = 30)

      Check if the sidecar container has reached the 'Running' state before performing do_xcom_push.



   .. py:method:: extract_xcom(pod, *, ignore_kill_failure = True)

      Retrieve XCom value and kill xcom sidecar container.

      :param pod: the pod to read the XCom result from.
      :param ignore_kill_failure: when True (the default), a failure to kill the sidecar
          container is logged as a warning and the successfully read XCom value is still
          returned. Set it to False when the caller cannot tolerate a sidecar that keeps
          running, for example ``KubernetesJobOperator``, whose Job can never reach a
          terminal state while the sidecar is alive.



   .. py:method:: extract_xcom_json(pod)

      Retrieve XCom value and also check if xcom json is valid.



   .. py:method:: extract_xcom_kill(pod)

      Kill xcom sidecar container.



.. py:class:: OnFinishAction

   Bases: :py:obj:`str`, :py:obj:`enum.Enum`


   Action to take when the pod finishes.


   .. py:attribute:: KEEP_POD
      :value: 'keep_pod'



   .. py:attribute:: DELETE_POD
      :value: 'delete_pod'



   .. py:attribute:: DELETE_ACTIVE_POD
      :value: 'delete_active_pod'



   .. py:attribute:: DELETE_SUCCEEDED_POD
      :value: 'delete_succeeded_pod'



.. py:class:: OnKillAction

   Bases: :py:obj:`str`, :py:obj:`enum.Enum`


   Action to take when the task is killed by the user.


   .. py:attribute:: DELETE_POD
      :value: 'delete_pod'



   .. py:attribute:: KEEP_POD
      :value: 'keep_pod'



.. py:function:: is_log_group_marker(line)

   Check if the line is a log group marker like `::group::` or `::endgroup::`.


.. py:function:: parse_log_line(line)

   Parse K8s log line and returns the final state.

   :param line: k8s log line
   :return: timestamp and log message


.. py:class:: AsyncPodManager(async_hook, callbacks = None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Create, monitor, and otherwise interact with Kubernetes pods for use with the KubernetesPodTriggerer.


   .. py:attribute:: stop_watching_events
      :value: False



   .. py:method:: read_pod(pod)
      :async:


      Read POD information.



   .. py:method:: read_pod_events(pod, resource_version = None)
      :async:


      Get pod's events.



   .. py:method:: watch_pod_events(pod, startup_check_interval = 30)
      :async:


      Watch pod events and write to log.



   .. py:method:: await_pod_start(pod, schedule_timeout = 120, startup_timeout = 120, check_interval = 1)
      :async:


      Wait for the pod to reach phase other than ``Pending``.

      :param pod:
      :param schedule_timeout: Timeout (in seconds) for pod stay in schedule state
          (if pod is taking to long in schedule state, fails task)
      :param startup_timeout: Timeout (in seconds) for startup of the pod
          (if pod is pending for too long after being scheduled, fails task)
      :param check_interval: Interval (in seconds) between checks
      :return:



   .. py:method:: fetch_container_logs_before_current_sec(pod, container_name, since_time = None)
      :async:


      Asynchronously read the log file of the specified pod.

      This method streams logs from the base container, skipping log lines from the current second to prevent duplicate entries on subsequent reads. It is designed to handle long-running containers and gracefully suppresses transient interruptions.

      :param pod: The pod specification to monitor.
      :param container_name: The name of the container within the pod.
      :param since_time: The timestamp from which to start reading logs.
      :return: The timestamp to use for the next log read, representing the start of the current second. Returns None if an exception occurred.



